--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [3.0.0, 2.13.6]
+        scala: [3.1.1, 2.12.15, 2.13.8]
         java: [temurin@8]
         project: [rootJS, rootJVM]
     runs-on: ${{ matrix.os }}
@@ -101,7 +101,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13.6]
+        scala: [2.13.8]
         java: [temurin@8]
     runs-on: ${{ matrix.os }}
     steps:
@@ -129,42 +129,62 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
-      - name: Download target directories (3.0.0, rootJS)
+      - name: Download target directories (3.1.1, rootJS)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-3.0.0-rootJS
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3.1.1-rootJS
 
-      - name: Inflate target directories (3.0.0, rootJS)
+      - name: Inflate target directories (3.1.1, rootJS)
         run: |
           tar xf targets.tar
           rm targets.tar
 
-      - name: Download target directories (3.0.0, rootJVM)
+      - name: Download target directories (3.1.1, rootJVM)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-3.0.0-rootJVM
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3.1.1-rootJVM
 
-      - name: Inflate target directories (3.0.0, rootJVM)
+      - name: Inflate target directories (3.1.1, rootJVM)
         run: |
           tar xf targets.tar
           rm targets.tar
 
-      - name: Download target directories (2.13.6, rootJS)
+      - name: Download target directories (2.12.15, rootJS)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.6-rootJS
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-rootJS
 
-      - name: Inflate target directories (2.13.6, rootJS)
+      - name: Inflate target directories (2.12.15, rootJS)
         run: |
           tar xf targets.tar
           rm targets.tar
 
-      - name: Download target directories (2.13.6, rootJVM)
+      - name: Download target directories (2.12.15, rootJVM)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.6-rootJVM
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-rootJVM
 
-      - name: Inflate target directories (2.13.6, rootJVM)
+      - name: Inflate target directories (2.12.15, rootJVM)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.13.8, rootJS)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.8-rootJS
+
+      - name: Inflate target directories (2.13.8, rootJS)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.13.8, rootJVM)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.8-rootJVM
+
+      - name: Inflate target directories (2.13.8, rootJVM)
         run: |
           tar xf targets.tar
           rm targets.tar
